--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ background-color: var(--lavender-blush) ;
 
 .heroSection{
     background-image: url("./images/Hero2.jpg");
+    max-width: 100%;
     height: 80vh;
     background-size: cover ;
     background-repeat: no-repeat;
@@ -48,6 +49,7 @@ background-color: var(--lavender-blush) ;
 
 /* About */
 .about{
+    margin-bottom: 10vh;
     min-height: 100vh;
     display: grid;
     place-items: center;
@@ -60,7 +62,6 @@ background-color: var(--lavender-blush) ;
     /* max-width: 1170px; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr, 2fr;
     grid-gap: 50px 30px;
 
 }
@@ -72,7 +73,7 @@ background-color: var(--lavender-blush) ;
 }
 
 .aboutContent{
-    padding: 3rem;
+    /* padding: 3rem; */
     text-align: justify;
     object-fit: cover;
     
@@ -83,7 +84,8 @@ overflow: hidden;
 }
 
 .aboutRow .aboutImage img{
-    width: 100%;
+    padding: 2.5%;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
 
@@ -92,8 +94,8 @@ overflow: hidden;
 
 .aboutRow .aboutContent p{
     font-size: 2rem;
-    line-height: 3,5rem;
-    padding-bottom: 2rem;
+    line-height: 2.5;
+    
 }
 
 
@@ -103,3 +105,12 @@ overflow: hidden;
 footer{
     background-color: var(--lavender-pink);
 }
+
+.footerRow{
+    color: white;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px 30px;
+}
+
