--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
 
 *{
-    font-family: 'Montserrat Alternates', sans-serif;
-    color: black;
+    font-family: 'Poppins', sans-serif;
+    /* color: black; */
 }
 :root{
 background-color: var(--lavender-blush) ;
@@ -11,11 +12,18 @@ background-color: var(--lavender-blush) ;
 --pink-lavender: #efc3e6ff;
 --lavender-blush: #f0e6efff;
 --periwinkle: #b8beddff;
+
+}
+
+.anioFont{
+    font-family:'Montserrat Alternates';
 }
 
 
 .navbar{
-    background-color: var(--lavender-pink);
+    background: #ee9ca7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left,  #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Montserrat Alternates', sans-serif;
     color: white;
     font-size: 2rem;
@@ -26,26 +34,43 @@ background-color: var(--lavender-blush) ;
     color: white;
 }
 
-.container{
+
+/* NAVBAR */
+/* .container{
     position: relative;
     
-}
+} */
 
-
+/* HERO */
 .heroSection{
-    background-image: url("./images/Hero2.jpg");
-    max-width: 100%;
-    height: 80vh;
-    background-size: cover ;
-    background-repeat: no-repeat;
-
+color: white;
 }
-
-.heroHeading{
-   color: white;
-   font-size: 10vh;
-   margin: auto;
+.slideContent{
+    margin-top: 20%;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.1); /* Adjust the color and opacity as needed */
+    border-radius: 25px 25px;
 }
+.heroH1{
+
+    font-size: 16rem;
+}
+.heroP{
+    font-size: 8rem;
+}
+/* Hero carousel */
+
+.carousel-item img {
+    object-fit: cover;
+    object-position: center;
+    height: 90vh;
+    width: 100%;
+    overflow: hidden; 
+    filter: brightness(0.7);   
+  }
+  
+ 
+
 
 /* About */
 .about{
@@ -103,7 +128,9 @@ overflow: hidden;
 
 /* Footer */
 footer{
-    background-color: var(--lavender-pink);
+    background: #ee9ca7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .footerRow{
