--- a/src/style.css
+++ b/src/style.css
@@ -78,17 +78,31 @@ color: white;
     width: 100%;
     overflow: hidden; 
     filter: brightness(0.7);   
+    border-radius: 0px 0px 30px 30px;
+    -moz-border-radius: 0px 0px 30px 30px;
+    -webkit-border-radius: 0px 0px 30px 30px;
+
   }
   
 /* Offer  */
 
 .offer{
+   
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%,  #ffdde1 100%);   
+    margin-top: 3rem;
     margin-bottom: 5vh;
     min-height: 30vh;
     padding-left: 15vh;
     padding-right: 15vh;
+    padding-bottom: 10vh;
+    border-radius: 30px 30px 30px 30px;
+    -moz-border-radius: 30px 30px 30px 30px;
+    -webkit-border-radius: 30px 30px 30px 30px;
+    -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    /* border: 2px solid var(--african-violet); */
   
 }
 
@@ -106,7 +120,9 @@ color: white;
 }
 
 .card:hover{
-    box-shadow: 3px 5px black;
+    -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     zoom: 1.02;
     transition: 0.5s;
 
@@ -115,11 +131,19 @@ color: white;
 
 /* About */
 .about{
+    margin-top: 3rem;
     margin-bottom: 10vh;
     min-height: 100vh;
     display: grid;
     place-items: center;
     font-size: xx-large;
+    padding-bottom: 10vh;
+    border-radius: 30px 30px 30px 30px;
+    -moz-border-radius: 30px 30px 30px 30px;
+    -webkit-border-radius: 30px 30px 30px 30px;
+    -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
       
 }
 
@@ -147,16 +171,17 @@ color: white;
 
 .aboutImage{
 overflow: hidden;
+
 }
 
 .aboutRow .aboutImage img{
     padding: 2.5%;
     max-width: 100%;
     height: 100%;
-    object-fit: cover;
-
-
+    object-fit: cover;  
 }
+
+
 
 .aboutRow .aboutContent p{
     font-size: 2rem;
@@ -172,6 +197,9 @@ footer{
     background: #ee9ca7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius: 30px 30px 0px 0px;
+    -moz-border-radius: 30px 30px 0px 0px;
+    -webkit-border-radius: 30px 30px 0px 0px;
 }
 
 .footerRow{
