--- a/src/style.css
+++ b/src/style.css
@@ -78,9 +78,9 @@ color: white;
     width: 100%;
     overflow: hidden; 
     filter: brightness(0.7);   
-    border-radius: 0px 0px 30px 30px;
+    /* border-radius: 0px 0px 30px 30px;
     -moz-border-radius: 0px 0px 30px 30px;
-    -webkit-border-radius: 0px 0px 30px 30px;
+    -webkit-border-radius: 0px 0px 30px 30px; */
 
   }
   
@@ -88,19 +88,21 @@ color: white;
 
 .offer{
    
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%,  #ffdde1 100%);   
+    background: #ffdde1;
+    /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%,  #ffdde1 100%);    */
     margin-top: 3rem;
     margin-bottom: 5vh;
+    margin-left: 1.5vh;
+    margin-right: 1.5vh;
     min-height: 30vh;
     padding-left: 15vh;
     padding-right: 15vh;
     padding-bottom: 10vh;
-    border-radius: 30px 30px 30px 30px;
+    /* border-radius: 30px 30px 30px 30px;
     -moz-border-radius: 30px 30px 30px 30px;
     -webkit-border-radius: 30px 30px 30px 30px;
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
     box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     /* border: 2px solid var(--african-violet); */
   
@@ -115,10 +117,14 @@ color: white;
 
 .card-img-top {
     width: 100%;
-    max-height: 30vh;
+    max-height: 30vh;   
     object-fit: cover;
 }
+.card-img-top {
+    filter: brightness(0.7);
 
+
+}
 .card:hover{
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
