--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 *{
     font-family: 'Poppins', sans-serif;
@@ -103,7 +104,7 @@ color: white;
     -webkit-border-radius: 30px 30px 30px 30px;
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
-    box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    /* box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
     /* border: 2px solid var(--african-violet); */
   
 }
@@ -144,17 +145,19 @@ color: white;
 .about{
     margin-top: 3rem;
     margin-bottom: 10vh;
+    margin-left: 1.5vh;
+    margin-right: 1.5vh;
     min-height: 100vh;
     display: grid;
     place-items: center;
     font-size: xx-large;
     padding-bottom: 10vh;
-    border-radius: 30px 30px 30px 30px;
+    /* border-radius: 30px 30px 30px 30px;
     -moz-border-radius: 30px 30px 30px 30px;
     -webkit-border-radius: 30px 30px 30px 30px;
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
+    /* box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
       
 }
 
@@ -167,6 +170,7 @@ color: white;
 
 }
 .aboutTitle{
+    font-family: 'Pacifico', cursive;
     padding-top: 2.6vh;
     padding-bottom: 2.6vh;
     text-align: center;
@@ -180,8 +184,8 @@ color: white;
     
 }
 
-.aboutImage{
-overflow: hidden;
+.--aboutImg{
+width: 100%;
 
 }
 
@@ -208,9 +212,9 @@ footer{
     background: #ee9ca7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border-radius: 30px 30px 0px 0px;
+    /* border-radius: 30px 30px 0px 0px;
     -moz-border-radius: 30px 30px 0px 0px;
-    -webkit-border-radius: 30px 30px 0px 0px;
+    -webkit-border-radius: 30px 30px 0px 0px; */
 }
 
 .footerRow{
