--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ background-color: var(--lavender-blush) ;
     
 } */
 
-/* HERO */
+/* --------------- Hero Component ---------------- */
 .heroSection{
 color: white;
 }
@@ -70,7 +70,7 @@ color: white;
 .heroP{
     font-size: 8rem;
 }
-/* Hero carousel */
+/* --------------- Hero Carousel ---------------- */
 
 .carousel-item img {
     object-fit: cover;
@@ -85,11 +85,12 @@ color: white;
 
   }
   
-/* Offer  */
+/* --------------- Offer Component ---------------- */
 
 .offer{
    
-    background: #ffdde1;
+    /* background: #ffdde1; */
+    border: #ffdde1 10px solid;
     /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%,  #ffdde1 100%);    */
     margin-top: 3rem;
     margin-bottom: 5vh;
@@ -127,8 +128,9 @@ color: white;
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    zoom: 1.02;
+    transform: scale(0.96);
     transition: 0.5s;
+    cursor: pointer;
 
 }
 
@@ -140,8 +142,8 @@ color: white;
 }
 
 
+/* --------------- About Component ---------------- */
 
-/* About */
 .about{
     margin-top: 3rem;
     margin-bottom: 10vh;
@@ -204,6 +206,8 @@ width: 100%;
     
 }
 
+/* --------------- Rel Component ---------------- */
+
 .rel{
     /* background-image: url("./images/componentBG.png");
     background-size: cover; */
@@ -215,6 +219,7 @@ width: 100%;
     padding-left: 15vh;
     padding-right: 15vh;
     padding-bottom: 10vh;
+    border: #ffdde1 10px solid;
 }
 
 .relTitle{
@@ -233,10 +238,112 @@ width: 100%;
    
 }
 
+/* --------------- Contact Component ---------------- */
+.contact{
+    background-image: linear-gradient(0deg, rgba(255, 221, 225, 0.502), rgba(255, 221, 225, 0.502)), url('./images/ContactBG.jpg') ;
+    background-position: center;
+    background-size: cover;
+    
+
+}
+.contactForm{
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+    border: #ffdde1 10px solid;
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(5px);
+}
+.formContainer{
+    
+    display: grid;
+    height: 100%;
+    width: 100%;
+}
+
+label{
+    font-size: 3vh;
+    
+   
+}
+input[type='text'], [type = 'email']{
+    font-size: 2vh;
+    height: 4vh;
+    max-width: 70%;
+    margin-bottom: 2rem;
+    border-color: rgba(255, 221, 225);
+}
+textarea{
+    font-size: 2vh !important;
+    size: 10vh;
+    height: 30vh;
+    max-width: 70%;
+    border-color: rgba(255, 221, 225);
+    margin-bottom: 2rem !important;
+}
+
+input[type='submit']{
+    max-width: 15%; 
+    height: 50%;    
+    background-color: white;
+    text-transform: uppercase;
+    border-color: rgba(255, 221, 225);
+    border-radius: 24px;
+    margin-bottom: 4rem;
+}
+
+input[type='submit']:hover{
+    transform: scale(0.96);
+}
+
+.contactDetails{
+    
+    margin-bottom: 3rem; 
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding-left: 20px;
+    border: #ffdde1 10px solid;
+    background-color: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(5px);
+    
+}
+
+.h1ContactDetails{
+    font-size: 8rem;
+    color: white;
+}
+.h2ContactDetails{
+    margin-bottom: 4rem;
+    color: white;
+}
+.h3ContactDetails{
+    margin-bottom: 2rem;
+    color: white;
+}
+
+.socialIcons{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-around;
+    font-size: 8rem;
+    color:rgba(255, 221, 225);
+}
+
+.fa-square-facebook:hover{
+    transform: scale(0.94);
+} 
+.fa-square-instagram:hover{
+    transform: scale(0.94);
+    
+} .fa-tiktok :hover{
+    transform: scale(0.94);
+   
+}
 
 
 
-/* Footer */
+/* --------------- Footer Component ---------------- */
 footer{
     background: #ee9ca7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
@@ -246,11 +353,5 @@ footer{
     -webkit-border-radius: 30px 30px 0px 0px; */
 }
 
-.footerRow{
-    color: white;
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 50px 30px;
-}
+
 
