--- a/src/style.css
+++ b/src/style.css
@@ -117,13 +117,23 @@ color: white;
     font-size: 4rem;
 }
 
-.card-img-top {
+.offerImg{
     width: 100%;
-    max-height: 30vh;   
+    max-height: 600px;
+    aspect-ratio: 16/9;
     object-fit: cover;
-    /* filter: brightness(0.65); */
 }
 
+.offerBtn{
+    width: 100%;
+    background-color:  white;
+    border: none;
+}
+
+.card-header{
+    background-color: white !important;
+    
+}
 .card:hover{
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
