--- a/src/style.css
+++ b/src/style.css
@@ -15,14 +15,26 @@
 background-color: var(--lavender-blush) ;
 
 /* FONTS */
---fs-Anio: 'Montserrat Alternates', sans-serif;
---fs-main: 'Poppins', sans-serif;
+--fst-Anio: 'Montserrat Alternates', sans-serif;
+--fst-main: 'Poppins', sans-serif;
 
+--fs--xxl: clamp(5.5rem, 12vw + 1rem, 16rem);
+--fs--xl: clamp(1rem, 6vw + 0.5rem, 4.236rem);
 }
-*{
-    font-family: var(--fs-main);
 
-    
+@media (max-width: 750px) {
+    .offer {
+        padding-left: 3rem !important;
+        padding-right: 3rem !important;
+    }
+}
+
+
+*{
+    font-family: var(--fst-main);
+    font-weight: 300;
+    line-height: 1.75;
+        
 }
 
 
@@ -52,7 +64,7 @@ color: white;
 }
 
 .heroHeading{
-    font-family: var(--fs-Anio);
+    font-family: var(--fst-Anio);
 }
 
 .slideContent{
@@ -61,12 +73,13 @@ color: white;
     border-radius: 25px 25px;
 }
 .heroH1{
-    font-family: var(--fs-Anio);
-    font-size: 16rem;
+    font-family: var(--fst-Anio);
+    font-size: var(--fs--xxl);
     font-weight: bold;
 }
 .heroP{
-    font-size: 4rem;
+    font-size: var(--fs--xl);
+    font-weight: 400;
 }
 
 .heroBtn{
@@ -93,6 +106,14 @@ color: white;
     top: 15%;
   }
   
+/*------------------- Global -----------------------*/
+  .sectionTitle{
+    padding-top: 2.6vh;
+    padding-bottom: 2.6vh;
+    text-align: center;
+    font-size: var(--fs--xl);
+    font-weight: 600;
+}
 /* --------------- Offer Component ---------------- */
 
 .offer{
@@ -118,12 +139,6 @@ color: white;
   
 }
 
-.offerTitle{
-    padding-top: 2.6vh;
-    padding-bottom: 2.6vh;
-    text-align: center;
-    font-size: 4rem;
-}
 
 .offerImg{
     width: 100%;
@@ -172,13 +187,7 @@ color: white;
     place-items: center;
     font-size: xx-large;
     padding-bottom: 10vh;
-    /* border-radius: 30px 30px 30px 30px;
-    -moz-border-radius: 30px 30px 30px 30px;
-    -webkit-border-radius: 30px 30px 30px 30px;
-    -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
-    /* box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
-      
+       
 }
 
 .aboutRow{
@@ -191,6 +200,7 @@ color: white;
 }
 .aboutTitle{
     font-family: 'Pacifico', cursive;
+    font-weight: 600;
     padding-top: 2.6vh;
     padding-bottom: 2.6vh;
     text-align: center;
@@ -244,7 +254,8 @@ width: 100%;
     padding-top: 2.6vh;
     padding-bottom: 2.6vh;
     text-align: center;
-    font-size: 4rem;
+    font-size: var(--fs--xl);
+    font-weight: 600;
 }
 
 .galleryItem{
@@ -327,7 +338,7 @@ input[type='submit']:hover{
 }
 
 .h1ContactDetails{
-    font-family: var(--fs-Anio);
+    font-family: var(--fst-Anio);
     font-size: 8rem;
     color: white;
 }
