--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,10 @@ background-color: var(--lavender-blush) ;
 
 --fs--xxl: clamp(5.5rem, 12vw + 1rem, 16rem);
 --fs--xl: clamp(1rem, 6vw + 0.5rem, 4.236rem);
+--fs--m: clamp(1rem, 4vw + 0.5rem, 1rem);
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
     
 }
 
@@ -177,19 +178,17 @@ color: white;
 .about{
     margin-top: 3rem;
     margin-bottom: 10vh;
-    margin-left: 1.5vh;
-    margin-right: 1.5vh;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
     min-height: 100vh;
     display: grid;
     place-items: center;
-    font-size: xx-large;
-    padding-bottom: 10vh;
+ 
        
 }
 
 .aboutRow{
     width: 75%;
-    /* max-width: 1170px; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 50px 30px;
@@ -201,7 +200,7 @@ color: white;
     padding-top: 2.6vh;
     padding-bottom: 2.6vh;
     text-align: center;
-    font-size: 4rem;
+    font-size: var(--fs--xl);
 }
 
 .aboutContent{
@@ -213,6 +212,9 @@ color: white;
 
 .--aboutImg{
 width: 100%;
+max-height: 100vh;
+aspect-ratio: 9/6;
+object-fit: contain;
 
 }
 
@@ -226,8 +228,8 @@ width: 100%;
 
 
 .aboutRow .aboutContent p{
-    font-size: 2rem;
-    line-height: 2.5;
+    font-size: var(--fs--m);
+    
     
 }
 
