--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 --pink-lavender: #efc3e6ff;
 --lavender-blush: #f0e6efff;
 --periwinkle: #b8beddff;
---candy-pink: #ee9ca7;
+--candy-pink: rgb(238, 156, 167);
 --light-candy:  #ffdde1;
 background-color: var(--lavender-blush) ;
 
@@ -40,9 +40,8 @@ background-color: var(--lavender-blush) ;
     background: var(--candy-pink);  /*fallback for old browsers */    
     background: -webkit-linear-gradient(to right, var(--light-candy), var(--candy-pink));  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left,  var(--light-candy), var(--candy-pink)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-family: 'Montserrat Alternates', sans-serif;
-    color: white;
-    font-size: 2rem;
+    font-family: var(--fst-main);
+    color: white;  
     
 }
 
@@ -116,14 +115,15 @@ color: white;
 
 .offer{   
    
-    border: var(--light-candy) 10px solid;
+    border-top: var(--light-candy) 10px solid;
+    border-bottom: var(--light-candy) 10px solid; ;
     margin-top: 3rem;
     margin-bottom: 5vh;
-    margin-left: 1.5vh;
-    margin-right: 1.5vh;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 30vh;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    /* padding-left: 1vw;
+    padding-right: 1vw; */
     padding-bottom: 10vh;
     /* border-radius: 30px 30px 30px 30px;
     -moz-border-radius: 30px 30px 30px 30px;
@@ -135,12 +135,13 @@ color: white;
   
 }
 
-
 .offerImg{
     width: 100%;
     max-height: 600px;
     aspect-ratio: 16/9;
     object-fit: cover;
+    outline: 10px solid rgba(255, 255, 255);
+    outline-offset: -2rem;
 }
 
 .offerBtn{
@@ -161,6 +162,23 @@ color: white;
     transition: 0.5s;
     cursor: pointer;
 
+}
+.offContainer{   
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.offHeader{
+    color: white;
+    font-size: var(--fs--xl);
+    font-weight: 900;   
+    text-shadow: black 0px 0px 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);   
+    z-index: 2;
 }
 
 .h5 { 
