--- a/src/style.css
+++ b/src/style.css
@@ -158,8 +158,8 @@ color: white;
     -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
     box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    transform: scale(0.96);
-    transition: 0.5s;
+    transform: scale(1.25);
+    transition: 1.5s;
     cursor: pointer;
 
 }
@@ -167,6 +167,7 @@ color: white;
     position: relative;
     text-align: center;
     color: white;
+    overflow: hidden;
 }
 
 .offHeader{
