fixing offer bug

--- a/src/style.css
+++ b/src/style.css
@@ -41,8 +41,9 @@ background-color: var(--lavender-blush) ;
     background: -webkit-linear-gradient(to right, var(--light-candy), var(--candy-pink));  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left,  var(--light-candy), var(--candy-pink)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: var(--fst-main);
-    color: white;  
-    
+    color: white;   
+    min-height: 4rem;   
+    max-height: 5vh;
 }
 
 
