--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ background-color: var(--lavender-blush);
 --fs--xxl: clamp(5.5rem, 12vw + 1rem, 16rem);
 --fs--xl: clamp(1rem, 6vw + 0.5rem, 4.236rem);
 --fs--m: clamp(1rem, 4vw + 0.5rem, 1rem);
+
 }
 
 @media (max-width: 768px) {
@@ -32,9 +33,8 @@ background-color: var(--lavender-blush);
     font-family: var(--fst-main);
     font-weight: 300;
     line-height: 1.75;
-        
+           
 }
-
 
 .navbar{
     background: var(--candy-pink);  /*fallback for old browsers */    
@@ -355,6 +355,10 @@ input[type='submit']{
     color: white;
 }
 
+.linkStyle{
+    text-decoration: none;
+    color: inherit;
+}
 .socialIcons{
     padding-top: 2rem;
     padding-bottom: 2rem;
