--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 --primary:#88BEA1 ;  /* Green*/
 --secondary:#9CB0A4 ;  	/* Yellow*/
 --third: rgb(57, 75, 65);
-background-color: var(--lavender-blush);
+
 
 /* FONTS */
 --fst-Anio: 'Montserrat Alternates', sans-serif;
@@ -30,6 +30,9 @@ background-color: var(--lavender-blush);
     font-weight: 300;
     line-height: 1.75;
            
+}
+body{
+    background-color: white;
 }
 
 .whiteTxt{
@@ -123,28 +126,29 @@ color: white;
 
 .offer{   
     background-color: var(--secondary);
-    /* border-top: var(--secondary) 10px solid;
-    border-bottom: var(--secondary) 10px solid;  */
-    /* margin-top: 3rem; */
+    margin-top: 5vh;
     margin-bottom: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    /* margin-left: 1.5vw;
+    margin-right: 1.5vw; */
     margin-inline: auto ;
     min-height: 30vh;
-    /* padding-left: 1vw;
-    padding-right: 1vw; */
     padding-bottom: 10vh;
     /* border-radius: 30px 30px 30px 30px;
-    -moz-border-radius: 30px 30px 30px 30px;
-    -webkit-border-radius: 30px 30px 30px 30px;
-    -webkit-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1);
-    -moz-box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
-    /* box-shadow: 3px 7px 50px -10px rgba(0,0,0,1); */
-    /* border: 2px solid var(--african-violet); */
+    -moz-border-radius: 30px 30px 30px 30px; 
+    -webkit-border-radius: 30px 30px 30px 30px;*/
+    -webkit-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+   
   
 }
 
 .offerImg{
+    margin-top: 1vh;
     width: 100%;
-    max-height: 600px;
+    max-height: 400px;
     aspect-ratio: 16/9;
     object-fit: cover;
     outline: 10px solid rgba(255, 255, 255);
@@ -153,7 +157,7 @@ color: white;
 
 .offerBtn{
     width: 100%;
-    background-color:  white;
+    background-color:white;
     border: none;
 }
 
@@ -209,10 +213,14 @@ color: white;
 /* --------------- About Component ---------------- */
 
 .about{
-    margin-top: 3rem;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     margin-left: 1.5vw;
     margin-right: 1.5vw;
+    padding: 1.5vw;
+    -webkit-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
     
        
 }
@@ -259,13 +267,16 @@ object-fit: contain;
     background-size: cover; */
     margin-top: 3rem;
     margin-bottom: 5vh;
-    margin-left: 1.5vh;
-    margin-right: 1.5vh;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
     min-height: 30vh;
     padding-left: 1vw;
     padding-right: 1vw;
     padding-bottom: 10vh;
-    border: var(--primary) 10px solid;
+   background-color: var(--secondary);
+    -webkit-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    -moz-box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
+    box-shadow: 5px 10px 50px -10px rgba(0,0,0,1);
 }
 
 .relTitle{
