--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@ color: white;
 /* --------------- Offer Component ---------------- */
 
 .offer{   
-    background-color: var(--secondary);
+    background: linear-gradient(to bottom,  var(--primary), var(--third));
     margin-top: 5vh;
     margin-bottom: 5vh;
     margin-left: 5vw;
@@ -190,7 +190,7 @@ color: white;
 
 .offList{
     margin: 0.5vw;
-    background-color: rgba(89, 89, 89, 0.15);
+    background-color: var(--secondary);
     box-shadow: 3px 5px 5px -3px rgba(0,0,0,1);
     font-size: var(--fs--m);
     list-style: none;
